<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_editar"
        android:icon="@drawable/ic_edit_white_26dp"
        android:enabled="true"
        android:title="@string/textEditar"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_guardar"
        android:icon="@drawable/ic_save_white_26dp"
        android:title="@string/textGuardar"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_eliminar"
        android:icon="@drawable/ic_delete_white_26dp"
        android:title="@string/textEliminar"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>
</menu>