<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityConfiguracion">

    <Button
        android:id="@+id/btnSeleccionarTemaDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="140dp"
        android:onClick="showDialogTemasDefault"
        android:text="@string/select"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemas2" />

    <TextView
        android:id="@+id/textViewTemas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="224dp"
        android:text="@string/temasDefault"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConfig" />

    <TextView
        android:id="@+id/textViewTemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/temas"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConfig" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTituloToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configtitulo"
            android:textColor="#FBFAFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/btnAplicarConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/contentDesc"
        android:onClick="mostrarPantallaDetalles"
        android:src="@drawable/ic_done_white_26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toolbarConfig"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnSeleccionarTemaCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="140dp"
        android:onClick="showDialogTemasCustom"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTemas" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarTemaCustom" />

</androidx.constraintlayout.widget.ConstraintLayout>