<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgProfileUser"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="119dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="142dp"
                android:contentDescription="@string/contentDesc"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfileUser" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNombre"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="1dp"
                android:clickable="false"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreEstudiante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="@string/nombreEst"
                    android:textColor="@drawable/selector"
                    android:textColorHint="@drawable/selector_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCity"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCiudadNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/ciudadNacimiento"
                    android:textColor="@drawable/selector" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMatricula"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMatricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/matriculaEstudiante"
                    android:textColor="@drawable/selector" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescripcion"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMatricula">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/exprCreativa"
                    android:inputType="textMultiLine|textImeMultiLine"
                    android:textColor="@drawable/selector" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>